--- a/references/biblio.bib
+++ b/references/biblio.bib
@@ -92,8 +92,7 @@
   journaltitle = {BAE Systems Threat Research Blog},
   url = {https://baesystemsai.blogspot.com/2017/10/taiwan-heist-lazarus-tools.html},
   file = {C\:\\Users\\User\\Zotero\\storage\\88BP79Q6\\taiwan-heist-lazarus-tools.html},
-  keywords = {Threat Research},
-  note = {Library Catalog: Blogger}
+  keywords = {Threat Research}
 }
 
 @online{thomsonHackersNick60m2017,
@@ -144,6 +143,118 @@
   isbn = {978-1-315-84932-4},
   langid = {english}
 }
+
+@online{AttacksSWIFTBanking2016,
+  title = {Attacks on {{SWIFT Banking System Benefit From Insider Knowledge}}},
+  date = {2016-05-20T16:10:55-07:00},
+  journaltitle = {McAfee Blogs},
+  url = {https://securingtomorrow.mcafee.com/blogs/other-blogs/mcafee-labs/attacks-swift-banking-system-benefit-insider-knowledge},
+  langid = {american}
+}
+
+@online{VietnameseBankBlocks,
+  title = {Vietnamese {{Bank Blocks}} \$1 {{Million SWIFT Heist}}},
+  url = {https://www.databreachtoday.com/vietnamese-bank-blocks-1-million-swift-heist-a-9105},
+  langid = {english}
+}
+
+@online{kasperskycontenthub,
+ title = {Lazarus Under The Hood},
+url = {https://media.kasperskycontenthub.com/wp-content/uploads/sites/43/2018/03/07180244/Lazarus_Under_The_Hood_PDF_final.pdf},
+langid = {english}
+}
+
+@online{SWIFTWarnsBanks,
+  title = {{{SWIFT Warns Banks}}: {{Coordinated Malware Attacks Underway}}},
+  url = {https://www.bankinfosecurity.com/swift-warns-banks-coordinated-malware-attacks-underway-a-9101},
+  urldate = {2020-03-27}
+}
+
+@online{CityUnionBank2018,
+  title = {City {{Union Bank}} Is the Last Victim of a Cyber Attack That Used {{SWIFT}} to Transfer Funds},
+  date = {2018-02-19T19:19:12+00:00},
+  journaltitle = {Security Affairs},
+  url = {https://securityaffairs.co/wordpress/69268/cyber-crime/city-union-bank-hack.html},
+  langid = {american}
+}
+
+@article{IndiaCityUnion2018,
+  title = {India's {{City Union Bank CEO}} Says Suffered Cyber Hack via {{SWIFT}} System},
+  date = {2018-02-18},
+  journaltitle = {Reuters},
+  url = {https://www.reuters.com/article/us-city-union-bank-swift-idUSKCN1G20AF},
+  entrysubtype = {newspaper},
+  langid = {english}
+}
+
+@online{badcyberSeveralPolishBanks2017,
+  title = {Several {{Polish}} Banks Hacked, Information Stolen by Unknown Attackers},
+  author = {{badcyber}, Author},
+  date = {2017-02-03T06:06:04+00:00},
+  journaltitle = {BadCyber},
+  url = {https://badcyber.com/several-polish-banks-hacked-information-stolen-by-unknown-attackers/},
+  langid = {american}
+}
+
+@online{PolishBanksInfected,
+  title = {Polish {{Banks Infected}} with {{Malware Hosted}} on {{Their Own Government}}'s {{Site}}},
+  journaltitle = {BleepingComputer},
+  url = {https://www.bleepingcomputer.com/news/security/polish-banks-infected-with-malware-hosted-on-their-own-governments-site/},
+  langid = {american}
+}
+
+@online{WlamaniaKilkuBankow,
+  title = {Włamania do kilku banków skutkiem poważnego ataku na polski sektor finansowy},
+  journaltitle = {Zaufana Trzecia Strona},
+  url = {https://zaufanatrzeciastrona.pl/post/wlamania-do-kilku-bankow-skutkiem-powaznego-ataku-na-polski-sektor-finansowy/},
+  langid = {polish}
+}
+
+@online{MungurkApt38,
+  title = {Mungurk/Apt\_38},
+  url = {https://github.com/mungurk/apt_38},
+  langid = {english}
+}
+
+@online{BancoChileLoses,
+  title = {Banco de {{Chile Loses}} \$10 {{Million}} in {{SWIFT}}-{{Related Attack}}},
+  url = {https://www.bankinfosecurity.com/banco-de-chile-loses-10-million-in-swift-related-attack-a-11075},
+  langid = {english}
+}
+
+@online{BancoChileWiper,
+  title = {Banco de {{Chile Wiper Attack Just}} a {{Cover}} for \${{10M SWIFT Heist}}},
+  url = {https://threatpost.com/banco-de-chile-wiper-attack-just-a-cover-for-10m-swift-heist/132796/},
+  langid = {english}
+}
+
+@online{HackersCrashedBank,
+  title = {Hackers {{Crashed}} a {{Bank}}’s {{Computers While Attempting}} a {{SWIFT Hack}}},
+  journaltitle = {BleepingComputer},
+  url = {https://www.bleepingcomputer.com/news/security/hackers-crashed-a-bank-s-computers-while-attempting-a-swift-hack/},
+  langid = {american}
+}
+
+@online{CosmosBankSWIFT2018,
+  title = {Cosmos {{Bank SWIFT}}/{{ATM Cyber Attack Detection}}},
+  date = {2018-08-27T08:00:41+00:00},
+  journaltitle = {Securonix},
+  url = {https://www.securonix.com/securonix-threat-research-cosmos-bank-swift-atm-us13-5-million-cyber-attack-detection-using-security-analytics/},
+  langid = {american}
+}
+
+@online{PoliceInvestigateCosmos,
+  title = {Police {{Investigate Cosmos Bank Hack}}},
+  url = {https://www.bankinfosecurity.com/police-investigate-cosmos-bank-hack-a-11379},
+  langid = {english}
+}
+
+
+
+
+
+
+
 
 
 
